--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -66,7 +66,7 @@
 			<div class="{{ cond $hdr "bg-black-30 bb bt" "" }}">
 
 				<nav class="hide-print sans-serif {{ cond $hdr "" "bg-black" }} border-box pa3 ph5-l">
-					<a href="http://www.katchblog.com" title="Home">
+					<a href="{{ .Site.BaseURL }}" title="Home">
 						<img src="{{ "/img/logo.jpg" | absURL }}" class="w2 h2 br-100" alt="{{ .Site.Title }}" />
 					</a>
 					<div class="fr h2 pv2 tr">
@@ -138,8 +138,8 @@
 			</p>
 		</footer>
 		{{ end }}
-	{{ template "_internal/google_analytics_async.html" . }}
+	<!-- {{ template "_internal/google_analytics_async.html" . }}
 	{{ with .Site.Params.foot }}{{ range . }}
-	{{ . | safeHTML }}{{ end }}{{ end }}
+	{{ . | safeHTML }}{{ end }}{{ end }} -->
 	</body>
 </html>
