--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -63,6 +63,11 @@
 		-->
 		{{- $hdr := cond (or (in .Site.Params.classes "feature-nohdr") (in .Params.classes "feature-nohdr")) false true -}}
 		<header class="cover bg-top" {{ if $hdr }}style="background-image: url('{{ absURL (default "/img/default-header-img.jpg" .Params.image) }}'); background-position: center;"{{ end }}>
+			
+			{{ "<!-- isso -->" | safeHTML }}
+			<script data-isso="https://isso.katchblog.com/" src="/isso/js/embed.min.js"></script>
+			{{ "<!-- end isso -->" | safeHTML }}
+		
 			<div class="{{ cond $hdr "bg-black-30 bb bt" "" }}">
 
 				<nav class="hide-print sans-serif {{ cond $hdr "" "bg-black" }} border-box pa3 ph5-l">
