--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -7,7 +7,7 @@
 		<link rel="alternate" type="application/rss+xml" title="RSS" href="{{ "index.xml" | absURL }}">
 		<link rel="canonical" href="{{ .Permalink }}">
 		<!-- the Story logo is a square with rounded corners interlocked with a section symbol in Bodoni 72 Book font -->
-		<link rel="shortcut icon" type="image/png" href="{{ "img/favicon.png" | absURL }}">
+		<link rel="shortcut icon" type="image/png" href="{{ .Site.Params.favicon | absURL }}">
 		{{ with .Description }}<meta name="description" content="{{. | markdownify }}">{{ end }}
 		{{ with .Keywords }}<meta name="keywords" content="{{.}}">{{ end }}
 		{{ .Hugo.Generator }}
@@ -129,11 +129,12 @@
 		{{ block "main" . }}
 		{{ end }}
 		</main>
-		{{ block "about" . }}
-			{{ partial "about.html" . }}
+		{{ block "pagination" . }}
 		{{ end }}
-		{{ block "pagination" . }}{{ end }}
-		{{ block "footer" . }}
+		{{ block "about" . }}
+		{{ partial "about.html" . }}
+		{{ end }}
+		<!-- {{ block "footer" . }}
 		<footer class="hide-print sans-serif f6 fw1 bg-black near-white bottom-0 w-100 pa3" role="contentinfo">
 			<p class="w-50 fr tr">
 			<a class="no-underline near-white" href="https://github.com/xaprb/story"><img class="dib" title="Made with Hugo and Story" alt="Story logo" src="{{ "/img/story-logo-white.svg" | absURL }}" style="width: 1.5rem; height: 1.5rem" /></a>
@@ -142,7 +143,7 @@
 				&copy; {{ now.Format "2006" }} {{ with .Site.Params.author }}{{ . }}{{ end }}
 			</p>
 		</footer>
-		{{ end }}
+		{{ end }} -->
 	<!-- {{ template "_internal/google_analytics_async.html" . }}
 	{{ with .Site.Params.foot }}{{ range . }}
 	{{ . | safeHTML }}{{ end }}{{ end }} -->
